add consultation section with responsivness

--- a/index.html
+++ b/index.html
@@ -186,6 +186,51 @@
         </div>
         <button class="how-it-works__btn">About Our Process</button>
     </section>
+    <section class="consultation">
+        <div class="consultation__box">
+            <h2 class="consultation__title">Free Consultation</h2>
+            <p class="consultation__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione numquam sit
+                cupiditate cum ducimus velit, recusandae, dicta totam, illum hic minus illo enim a est maxime pariatur
+                repudiandae eaque. Magnam!</p>
+        </div>
+        <form class="consultation__form">
+            <label class="consultation__label" for="name">
+                <p class="consultation__p">First name
+                </p>
+                <div class="consultation__logo"><i class="fas fa-user"></i></div>
+                <input placeholder="First Name" id="name" type="text" class="consultation__input">
+            </label>
+            <label class="consultation__label" for="last-name">
+                <p class="consultation__p">Last name
+                </p>
+                <div class="consultation__logo"><i class="fas fa-user"></i></div>
+                <input placeholder="Last Name" id="last-name" type="text" class="consultation__input">
+            </label>
+            <label class="consultation__label" for="select">
+                <p class="consultation__p">What is your inquiry about?</p>
+                <div class="consultation__logo"><i class="fas fa-info"></i></div>
+                <select class="consultation__select" id="select">
+                    <option>Please Select</option>
+                    <option>Option 1</option>
+                    <option>Option 2</option>
+                    <option>Option 3</option>
+                </select>
+            </label>
+            <label class="consultation__label" for="phone">
+                <p class="consultation__p">Phone
+                </p>
+                <div class="consultation__logo"> <i class="fas fa-phone"></i></div>
+                <input placeholder="Full Number" id="phone" type="number" class="consultation__input">
+            </label>
+            <label class="consultation__label" for="email">
+                <p class="consultation__p">Email address
+                </p>
+                <div class="consultation__logo"><i class="fas fa-envelope"></i></div>
+                <input placeholder="name@company.com" id="email" type="email" class="consultation__input">
+            </label>
+            <button class="consultation__btn" type="submit">Get a free consultation</button>
+        </form>
+    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
     <script src="./js/nav.js"></script>
     <script src="./js/header.js"></script>
