--- a/index.html
+++ b/index.html
@@ -231,6 +231,52 @@
             <button class="consultation__btn" type="submit">Get a free consultation</button>
         </form>
     </section>
+    <section class="testimonials">
+        <div class="testimonials__icon"><i class="fas fa-quote-right"></i></div>
+        <h2 class="testimonials__title">Testimonials</h2>
+        <p class="testimonials__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam necessitatibus
+            impedit minima earum praesentium vero.</p>
+        <div class="testimonials__wrapper">
+            <div class="testimonials__box">
+                <div class="testimonials__img"></div>
+                <p class="testimonials__opinion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores,
+                    voluptates! </p>
+                <p class="testimonials__name">Example Y.</p>
+            </div>
+            <div class="testimonials__box">
+                <div class="testimonials__img"></div>
+                <p class="testimonials__opinion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores,
+                    voluptates!</p>
+                <p class="testimonials__name">Example Y.</p>
+            </div>
+            <div class="testimonials__box">
+                <div class="testimonials__img"></div>
+                <p class="testimonials__opinion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores,
+                    voluptates!</p>
+                <p class="testimonials__name">Example Y.</p>
+            </div>
+            <div class="testimonials__box">
+                <div class="testimonials__img"></div>
+                <p class="testimonials__opinion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores,
+                    voluptates!</p>
+                <p class="testimonials__name">Example Y.</p>
+            </div>
+        </div>
+    </section>
+    <section class="about">
+        <div class="about__img"></div>
+        <div class="about__text-module">
+            <div class="about__icon"><i class="fas fa-medal"></i></div>
+            <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, et.</p>
+            <button class="about__btn"></button>
+        </div>
+        <div class="about__img"></div>
+        <div class="about__text-module">
+            <div class="about__icon about__icon--bg"><i class="fas fa-users"></i></div>
+            <h2 class="about__title">Best People</h2>
+            <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, et.</p>
+        </div>
+    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
     <script src="./js/nav.js"></script>
     <script src="./js/header.js"></script>
