add about section with responsivness

--- a/index.html
+++ b/index.html
@@ -266,15 +266,22 @@
     <section class="about">
         <div class="about__img"></div>
         <div class="about__text-module">
-            <div class="about__icon"><i class="fas fa-medal"></i></div>
-            <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, et.</p>
-            <button class="about__btn"></button>
+            <div class="about__box">
+                <div class="about__icon"><i class="fas fa-medal"></i></div>
+                <h2 class="about__title">Innovation Industry</h2>
+                <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus a dolore
+                    quod,
+                    eum animi possimus nobis expedita dicta delectus quos?</p>
+                <button class="about__btn">Read More</button>
+            </div>
         </div>
         <div class="about__img"></div>
         <div class="about__text-module">
-            <div class="about__icon about__icon--bg"><i class="fas fa-users"></i></div>
-            <h2 class="about__title">Best People</h2>
-            <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, et.</p>
+            <div class="about__box">
+                <div class="about__icon about__icon--bg"><i class="fas fa-users"></i></div>
+                <h2 class="about__title">Best People</h2>
+                <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, et.</p>
+            </div>
         </div>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
