--- a/index.html
+++ b/index.html
@@ -284,6 +284,59 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer__wrapper">
+            <div class="footer__box">
+                <h1 class="footer__logo">SoftCode</h1>
+            </div>
+            <div class="footer__box">
+                <h4 class="footer__title">Quick Links</h4>
+                <ul class="footer__list">
+                    <li class="footer__li"><a class="footer__link" href="#">Link One</a></li>
+                    <li class="footer__li"><a class="footer__link" href="#">Link Two</a></li>
+                    <li class="footer__li"><a class="footer__link" href="#">Link Three</a></li>
+                </ul>
+            </div>
+            <div class="footer__box">
+                <h4 class="footer__title">Page Links</h4>
+                <ul class="footer__list">
+                    <li class="footer__li"><a class="footer__link" href="#">Link One</a></li>
+                    <li class="footer__li"><a class="footer__link" href="#">Link Two</a></li>
+                    <li class="footer__li"><a class="footer__link" href="#">Link Three</a></li>
+                </ul>
+            </div>
+            <div class="footer__box">
+                <h4 class="footer__title">Page Links</h4>
+                <ul class="footer__list">
+                    <li class="footer__li"><a class="footer__link" href="#">Link One</a></li>
+                    <li class="footer__li"><a class="footer__link" href="#">Link Two</a></li>
+                    <li class="footer__li"><a class="footer__link" href="#">Link Three</a></li>
+                </ul>
+            </div>
+            <div class="footer__box">
+                <h4 class="footer__title">Subscribe</h4>
+                <input type="text" placeholder="Enter your email" class="footer__input"><button class="footer__btn"><i
+                        class="fas fa-arrow-right"></i></button>
+            </div>
+            <div class="footer__box">
+                <div class="footer__phone">
+                    <div class="footer__icon"><i class="fas fa-phone-alt"></i></div>
+                    <p class="footer__number">123 456 789</p>
+                </div>
+                <div class="footer__socials">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-linkedin-in"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-twitter"></i>
+                </div>
+            </div>
+            <p class="footer__copyright">
+                &copy; 2021 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id inventore esse repellendus,
+                perspiciatis
+                error impedit.
+            </p>
+        </div>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
     <script src="./js/nav.js"></script>
     <script src="./js/header.js"></script>
