--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-    <div class="blure"></div>
     <nav class="nav">
         <div class="nav__container">
             <div class="nav__line">
@@ -71,28 +70,32 @@
         <div class="stats__box">
             <div class="stats__icon"><i class="fas fa-bullseye"></i></div>
             <div class="stats__content">
-                <p class="stats__number">500<span class="stats__span">+</span> </p>
+                <p class="stats__number"> <span class="stats__stat" data-number="500">0</span> <span
+                        class="stats__span">+</span> </p>
                 <p class="stats__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
             </div>
         </div>
         <div class="stats__box">
             <div class="stats__icon"><i class="fas fa-pen"></i></div>
             <div class="stats__content">
-                <p class="stats__number">30<span class="stats__span">%</span> </p>
+                <p class="stats__number"><span class="stats__stat" data-number="30">0</span> <span
+                        class="stats__span">%</span> </p>
                 <p class="stats__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
             </div>
         </div>
         <div class="stats__box">
             <div class="stats__icon"><i class="fas fa-tools"></i></div>
             <div class="stats__content">
-                <p class="stats__number">1200<span class="stats__span">+</span> </p>
+                <p class="stats__number"><span class="stats__stat" data-number="1200">0</span> <span
+                        class="stats__span">+</span> </p>
                 <p class="stats__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
             </div>
         </div>
         <div class="stats__box">
             <div class="stats__icon"><i class="fas fa-cube"></i></div>
             <div class="stats__content">
-                <p class="stats__number">563<span class="stats__span">+</span> </p>
+                <p class="stats__number"><span class="stats__stat" data-number="350">0</span> <span
+                        class="stats__span">+</span> </p>
                 <p class="stats__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
             </div>
         </div>
@@ -337,9 +340,13 @@
             </p>
         </div>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
+    <div class="blure"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/ScrollTrigger.min.js"></script>
     <script src="./js/nav.js"></script>
     <script src="./js/header.js"></script>
+    <script src="./js/counting.js"></script>
 </body>
 
 </html>
