--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@
     <script src="./js/nav.js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/counting.js"></script>
+    <script src="./js/animation.js"></script>
 </body>
 
 </html>
