add loading animation

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <div class="loading-bg">
+        <div class="loading"></div>
+    </div>
     <div class="wrapper">
         <nav class="nav">
             <div class="nav__container">
@@ -361,6 +364,7 @@
     <script src="./js/header.js"></script>
     <script src="./js/counting.js"></script>
     <script src="./js/animation.js"></script>
+    <script src="./js/loading.js"></script>
 </body>
 
 </html>
