--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Software</title>
     <script src="https://kit.fontawesome.com/fa56ed0519.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" type="image/png" href="./src/favicon.png">
 </head>
 
 <body>
